# timeline/routes/index.js
@@ -20,7 +20,7 @@ const logInput = async(req, resp) => {
   })
 }
 router.post('/project/:projectId/timeline',[], Timeline.create)
-router.post('/project/:projectId/timeline/:timelineId',[], Timeline.refresh)
+router.post('/project/:projectId/timeline/:timelineId/refresh',[], Timeline.refresh)
 router.delete('/project/:projectId/timeline/:timelineId',[], Timeline.destroy)
 router.patch('/project/:projectId/timeline/:timelineId',[], Timeline.update)
 
